<resources>
    <string name="app_name">XMPPApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="chats">Chats</string>
    <string name="friends">Friends</string>
    <string name="groups">Groups</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_request_to">Send Request To</string>
    <string name="name">Name</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_name">Please Enter Name</string>
    <string name="accept">Accept</string>
    <string name="friend_request">Friend Request</string>
    <string name="log_out">Log Out</string>
    <string name="type_a_message">Type a message</string>
    <string name="new_group">NEW GROUP</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="create">Create</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="document">Document</string>
    <string name="all_permissions_are_not_granted">All Permissions are not granted</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_password">Please enter password</string>
</resources>
