<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:ignore="RtlSymmetry">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/friend_request"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_14sdp" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:paddingStart="@dimen/_10sdp"
        android:textSize="@dimen/_12sdp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="@dimen/_5sdp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_accept"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:padding="@dimen/_2sdp"
            android:text="@string/accept"
            app:cornerRadius="@dimen/_10sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:padding="@dimen/_2sdp"
            android:text="@string/cancel"
            app:cornerRadius="@dimen/_10sdp" />
    </LinearLayout>

</LinearLayout>