<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        tools:context=".activity.LogInActivity"
        tools:ignore="RtlSymmetry">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/_7sdp"
            app:boxCornerRadiusBottomStart="@dimen/_7sdp"
            app:boxCornerRadiusTopEnd="@dimen/_7sdp"
            app:boxCornerRadiusTopStart="@dimen/_7sdp">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/username"
                android:textSize="@dimen/_18sdp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/_7sdp"
            app:boxCornerRadiusBottomStart="@dimen/_7sdp"
            app:boxCornerRadiusTopEnd="@dimen/_7sdp"
            app:boxCornerRadiusTopStart="@dimen/_7sdp">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/password"
                android:textSize="@dimen/_18sdp"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="@dimen/_10sdp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_16sdp"
            app:cornerRadius="@dimen/_20sdp" />
    </LinearLayout>

    <include
        layout="@layout/layout_progress_bar"/>
</FrameLayout>